--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar" id="navbar">
         <div class="logo">
             <i class="fa-solid fa-industry" style="color: var(--accent-orange);"></i>
-            MAHIKA PLAST & ENTERPRISES
+            MAHIKA PLAST
         </div>
         <div class="nav-links">
             <a href="#home">Home</a>
