--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="logo">
             <!-- REPLACE THIS SRC WITH YOUR LOGO PATH -->
             <!-- Example: src="images/my-logo.png" -->
-            <img src="logo.png" alt="Mahika Plast Logo" class="logo-img">
+            <img src="https://placehold.co/100x100/png?text=MP" alt="Mahika Plast Logo" class="logo-img">
             <span>MAHIKA PLAST</span>
         </div>
         
