--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="logo">
             <!-- REPLACE THIS SRC WITH YOUR LOGO PATH -->
             <!-- Example: src="images/my-logo.png" -->
-            <img src="https://placehold.co/100x100/png?text=MP" alt="Mahika Plast Logo" class="logo-img">
+            <img src="logo.png" alt="Mahika Plast Logo" class="logo-img">
             <span>MAHIKA PLAST</span>
         </div>
         
@@ -79,7 +79,7 @@
                     </div>
                 </div>
                 <div class="about-images animate-on-scroll">
-                    <img src="https://images.unsplash.com/photo-1565514020126-253c9f28df13?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Factory Worker" class="img-card img-main">
+                    <img src="project1.png" alt="Factory Worker" class="img-card img-main">
                     <img src="https://images.unsplash.com/photo-1581093458791-9f302e6d8359?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Machine Parts" class="img-card img-secondary">
                 </div>
             </div>
@@ -147,7 +147,7 @@
                 <div class="footer-col">
                     <div class="logo" style="margin-bottom:20px;">
                         <!-- Logo in Footer as well -->
-                        <img src="https://placehold.co/100x100/png?text=MP" alt="Mahika Plast Logo" class="logo-img">
+                        <img src="logo.png" alt="Mahika Plast Logo" class="logo-img">
                         <span>MAHIKA PLAST</span>
                     </div>
                     <p style="opacity:0.8; font-size:0.9rem;">
