--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="about-images animate-on-scroll">
                     <img src="project1.png" alt="Factory Worker" class="img-card img-main">
-                    <img src="https://images.unsplash.com/photo-1581093458791-9f302e6d8359?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Machine Parts" class="img-card img-secondary">
+                    <img src="panel.jpg" alt="Machine Parts" class="img-card img-secondary">
                 </div>
             </div>
         </div>
@@ -198,7 +198,7 @@
                     <h3 id="modal-title">Service Title</h3>
                     <p id="modal-category" style="color: var(--accent-orange); font-weight:600; font-size: 0.9rem; margin-bottom: 1rem;">CATEGORY</p>
                     <p id="modal-desc">Description goes here...</p>
-                    <a href="#contact" onclick="document.getElementById('info-modal').classList.remove('active')" class="btn btn-primary" style="margin-top: 20px;">Request Quote</a>
+                    <!-- <a href="#contact" onclick="document.getElementById('info-modal').classList.remove('active')" class="btn btn-primary" style="margin-top: 20px;">Request Quote</a> -->
                 </div>
             </div>
         </div>
